# strace2seccomp

./: .gitmodules  .travis.yml  Makefile.am  README.md  configure.ac
examples/: ex1.st2se.md  ex1.st2se.md.html
src/: DataSet.cpp  DataSet.hpp  Grammar.hpp  ParserActions.hpp  SeccompCode.cpp  SeccompCode.hpp  Syscall.cpp  Syscall.hpp  analyze.cpp  analyze.hpp  collect.cpp  collect.hpp  grammar.hpp  main.cpp
